# learn_rl_concepts

./: .gitignore  .gitmodules  README.md  pyproject.toml
deep_rl_cs285/homeworks/hw1/: cs285_fall2023_hw1.pdf.xoj
deep_rl_cs285/homeworks/hw1/cs285.egg-info/: PKG-INFO
deep_rl_cs285/homeworks/hw2/: hw2.pdf.xoj  requirements.txt
deep_rl_cs285/lecture_notes/lecture1/: lec-1.pdf.xoj
deep_rl_cs285/lecture_notes/lecture2/: lec-2.pdf.xoj
deep_rl_cs285/lecture_notes/lecture3/: cs_285_fa23_pytorch_tutorial.py
deep_rl_cs285/lecture_notes/lecture6/: lec-6.pdf.xoj
deep_rl_cs285/lecture_notes/lecture8/: lec-8.xopp
deep_rl_hugging_face/unit1/programming_files/: bonus_unit1.ipynb  unit1.ipynb
deep_rl_hugging_face/unit2/programming_files/: unit2.ipynb
deep_rl_hugging_face/unit3/: icra22_optuna_lab.ipynb  unit3.ipynb
deep_rl_hugging_face/unit4/: Copy_of_unit4.ipynb
gymnasium_examples/: basic_usage.py  biped_walker.py  car_race.py  modifying_environment.py  trained_cartpole_with_ppo.py  trained_cartpole_with_ppo2.py
gymnasium_examples/mujoco/: ant_example.py
pybullet/: intro.py  simplecar.py
research_papers/: 2016-MLSS-RL_john_schulman_lecture.pdf.xoj
rl_alogrithms_implementation/: dynamic_programming_quiz.py  first_visit_mc_prediction.py
rl_alogrithms_implementation/humanoid_standup_ppo/: test.py  train.py
rl_alogrithms_implementation/other_algorithms/: cem_implementation.py  policy_evaluation.py  policy_iteration_alogrithm.py
rl_alogrithms_implementation/sac_with_quadruped/scripts/: quad_env.py  register_env.py  train_sac.py
(+9 files in other folders)
